--- a/src/components/preview.css
+++ b/src/components/preview.css
@@ -18,3 +18,20 @@
   bottom: 0;
   opacity: 0;
 }
+
+.preview-error {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: red;
+}
+
+.preview-error h4 {
+  display: block;
+  margin-block-start: 1.33em;
+  margin-block-end: 1.33em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
